# tiny-think

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
configs/dpo/: math_stem_apo_zero_beta0_3_lr3e_6_e1_bs8.yaml  math_stem_apo_zero_beta0_5_lr3e_6_e1_bs8.yaml  math_stem_apo_zero_beta1_lr3e_6_e1_bs8.yaml  math_stem_dpo_beta0_5_lr2e_6_e1_bs8.yaml  math_stem_dpo_beta1_lr1e_6_e1_bs8.yaml  math_stem_dpo_beta1_lr2e_6_e1_bs8.yaml  math_stem_dpo_beta1_lr3e_6_e1_bs8.yaml  math_stem_dpo_beta1_lr5e_6_e1_bs8.yaml  math_stem_dpo_beta2_lr2e_6_e1_bs8.yaml
configs/sft/: math_stem_dft_bf16.yaml  math_stem_dft_bf16_lr2e-5.yaml  math_stem_dft_bf16_lr5e-5.yaml  math_stem_nll_bf16.yaml  math_stem_nll_bf16_lr2e-5.yaml  math_stem_nll_bf16_lr5e-5.yaml
data/: creating_dpo_datasets.py  creating_sft_datasets.py  download_dolci_think_dpo.py  download_dolci_think_sft.py
data/sources/: cleaned_source_values_dpo.txt  cleaned_source_values_sft.txt  similar_sources.csv
eval/: math_eval_vllm.py  run_eval_vllm.sh  run_eval_vllm_multi.sh  run_math_eval.sh
train/: chat_template.jinja  dpo.py  sft.py
