[project]
name = "tiny-think"
version = "1.0.0"
description = "A code repository dedicated to development of extremely tiny reasoning models."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    { name = "Bojan Jakimovski - Shekswess", email = "jakimovski_bojan@outlook.com" },
]
license = { file = "LICENCE" }
dependencies = []


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["I", "E", "F"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.rules]
non-subscriptable = "warn"
unused-ignore-comment = "warn"
invalid-argument-type = "warn"
invalid-parameter-default = "warn"
unresolved-import = "warn"
invalid-assignment = "warn"


[dependency-groups]
dev = ["pre-commit==4.3.0", "ruff==0.14.1", "ty==0.0.1a8", "ipykernel==7.0.1"]
